--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -4,6 +4,8 @@ colorama==0.4.6
 dill==0.3.7
 Django==4.2.5
 django-cors-headers==4.2.0
+django-cron==0.6.0
+django-crontab==0.7.1
 django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
