--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -1,27 +1,13 @@
 asgiref==3.7.2
-astroid==3.0.0
-colorama==0.4.6
-dill==0.3.7
-Django==4.2.5
+Django==4.2.6
 django-cors-headers==4.2.0
 django-cron==0.6.0
-django-crontab==0.7.1
 django-filter==23.3
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-importlib-metadata==6.8.0
-isort==5.12.0
 Markdown==3.4.4
-mccabe==0.7.0
 Pillow==10.0.1
-platformdirs==3.11.0
-PyJWT==2.8.0
-pylint==3.0.1
 python-decouple==3.8
 pytz==2023.3.post1
 sqlparse==0.4.4
-tomli==2.0.1
-tomlkit==0.12.1
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 tzdata==2023.3
-zipp==3.17.0
