--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -1,13 +1,47 @@
+amqp==5.1.1
 asgiref==3.7.2
+astroid==3.0.0
+async-timeout==4.0.3
+billiard==4.1.0
+celery==5.3.4
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+dill==0.3.7
 Django==4.2.6
+django-celery-results==2.5.1
 django-cors-headers==4.2.0
 django-cron==0.6.0
+django-crontab==0.7.1
 django-filter==23.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+dnspython==2.4.2
+eventlet==0.33.3
+greenlet==3.0.0
+importlib-metadata==6.8.0
+isort==5.12.0
+kombu==5.3.2
 Markdown==3.4.4
+mccabe==0.7.0
 Pillow==10.0.1
+platformdirs==3.11.0
+prompt-toolkit==3.0.39
+PyJWT==2.8.0
+pylint==3.0.1
+python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3.post1
+redis==5.0.1
+schedule==1.2.1
+six==1.16.0
 sqlparse==0.4.4
-typing_extensions==4.8.0
+tomli==2.0.1
+tomlkit==0.12.1
+typing-extensions==4.8.0
 tzdata==2023.3
+vine==5.0.0
+wcwidth==0.2.8
+zipp==3.17.0
